[Bitrate] Improvize plugin (add infobar mode)
-mode  as infobar/extension menu
-add menu setup(z/x/y pozition)
-and support FullHD skin

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -1,7 +1,5 @@
 installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/Bitrate
 
-install_PYTHON =    \
-        __init__.py \
-        plugin.py \
-        bitrate.py
+install_PYTHON = __init__.py plugin.py bitrate.py
+install_DATA = bitrateviewer.png
 
