replace /usr/lib with $(LIBDIR)

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -6,7 +6,7 @@
 #
 
 DOMAIN=Bitrate
-installdir = /usr/lib/enigma2/python/Plugins/Extensions/$(DOMAIN)
+installdir = $(LIBDIR)/enigma2/python/Plugins/Extensions/$(DOMAIN)
 #GETTEXT=./pygettext.py
 GETTEXT=xgettext
 
