Add fr translation + adapt new languages in Makefile + script to update all po files

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -13,7 +13,7 @@ GETTEXT=xgettext
 #MSGFMT = ./msgfmt.py
 MSGFMT = msgfmt
 
-LANGS := ru
+LANGS := bg fr lt ru
 LANGPO := $(foreach LANG, $(LANGS),$(LANG).po)
 LANGMO := $(foreach LANG, $(LANGS),$(LANG).mo)
 
